--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUNAR'S CHOICE</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +30,20 @@
             <h1>LUNAR'S CHOICE RESTAURANT</h1>
             <P>Don't miss out on the latest updates, special offers, and exclusive events at Lunar's Choice!
                 <br> Subscribe to our newsletter to stay in the loop with all the exciting happenings at our new restaurant.</P>
+                <div>
+                    <button type="button">LEARN MORE</button>
+                    <button type="button" >SUBSCRIBE</button>
+                    </div>
         </div>
+        <footer>
+            <p>Reach out to us on any of our social media platforms</p>
+            <div class="social">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+<a href="#"><i class="fa-brands fa-instagram"></i></a>
+<a href="#"><i class="fa-brands fa-tiktok"></i></a>
+            </div>
+            <p class="end">Copyright @Lunar's Choice Restaurant</p>
+        </footer>
     </div>
 </body>
 </html>
