--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LUNAR'S CHOICE</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lexend:wght@200&family=Poppins:wght@300&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
@@ -18,10 +18,10 @@
         <div class=" navbar">
             <h2 class="logo">LUNAR'S <span>CHOICE</span></h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                    <li><a href="Menu.html">Menu</a></li>
+                    <li><a href="About.html">About Us</a></li>
+                    <li><a href="contact.html">contact Us</a></li>
             </ul>
         </div>
         <!--End of navbar-->
@@ -36,7 +36,7 @@
                     </div>
         </div>
         <footer>
-            <p>Reach out to us on any of our social media platforms</p>
+            <p class="p">Reach out to us on any of our social media platforms</p>
             <div class="social">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
 <a href="#"><i class="fa-brands fa-instagram"></i></a>
