--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,57 @@
-<link rel="stylesheet" href="css/style.css">
-<!--contact section-->
+<!DOCTYPE html>
+<head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/contact.css">
+</head>
 <section class="contact">
-    <div class="contact-form">
-        <h1>Contact <span>Us</span></h1>
-        <p>For more enquiries or bookings, connect with us via phone: +111222889936
-            or email: lunarschoice@gmail.com
-        </p>
-        <form action="">
-            <input type="" placeholder="Your Name" required>
-            <input type="email" name="email" id="" placeholder="E-mail" required>
-            <input type="" placeholder="Write a Subject" required>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message">
-
-            </textarea>
-            <input type="submit" name="" value="submit" class="btn">
-        </form>
+    <div class="content">
+<h2>Contact Us</h2>
+<p>We value your feedback and are always looking for ways to improve our restaurant and provide the best experience for our customers. If you have any questions, comments, or concerns, please feel free to contact us:
+</p>
     </div>
-    <div class="contact-img">
-        <img src="res/Vegan Pasta Recipes.jpeg" height="200px">
+    <div class="container">
+        <div class="contactInfo">
+            <div class="box">
+                <div class="icon"><i class="fa-solid fa-map-pin"></i></i></div>
+                <div class="text">
+                    <h3>Address</h3>
+                    <p>No 22 krystal moon, <br> grey, Canada<br>87392</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa-solid fa-phone"></i></div>
+                <div class="text">
+                    <h3>phone</h3>
+                    <p>843-923-8389</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="icon"><i class="fa-regular fa-envelope"></i></i></div>
+                <div class="text">
+                    <h3>Email</h3>
+                    <p>lunarschoice@gmail.com</p>
+                </div>
+            </div>
+        </div>
+        <div class="contactForm">
+            <form>
+                <h2>Send Message</h2>
+                <div class="inputBox">
+                    <input type="text" name="username"required="required">
+                    <span>Full Name</span>
+                </div>
+                <div class="inputBox">
+                    <input type="text" name="Email"  required="required">
+                    <span>Email</span>
+                </div>
+                <div class="inputBox">
+                    <textarea required="required"></textarea>
+                    <span>Type your Message...</span>
+                </div>
+                <div class="inputBox">
+                    <input type="submit" name="submit" value="send">
+                </div>
+            </form>
+        </div>
     </div>
 </section>
+</html>
