--- a/index.html
+++ b/index.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LUNAR'S CHOICE</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lexend:wght@200&family=Poppins:wght@300&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lexend:wght@200&family=Poppins:wght@300&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!---craeting the landing page-->
     <div class="banner">
-        <!--nav bar-->
-        <div class=" navbar">
-            <h2 class="logo">LUNAR'S <span>CHOICE</span></h2>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                    <li><a href="Menu.html">Menu</a></li>
-                    <li><a href="About.html">About Us</a></li>
-                    <li><a href="contact.html">contact Us</a></li>
-            </ul>
+      <!--nav bar-->
+      <div class="navbar">
+        <h2 class="logo">LUNAR'S <span>CHOICE</span></h2>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Menu.html">Menu</a></li>
+          <li><a href="About.html">About Us</a></li>
+          <li><a href="contact.html">contact Us</a></li>
+        </ul>
+      </div>
+      <!--End of navbar-->
+      <!--landing content-->
+      <div class="content">
+        <h1>LUNAR'S CHOICE RESTAURANT</h1>
+        <p>
+          Don't miss out on the latest updates, special offers, and exclusive
+          events at Lunar's Choice! <br />
+          Subscribe to our newsletter to stay in the loop with all the exciting
+          happenings at our new restaurant.
+        </p>
+        <div>
+          <button type="button">LEARN MORE</button>
+          <button type="button">SUBSCRIBE</button>
         </div>
-        <!--End of navbar-->
-        <!--landing content-->
-        <div class="content">
-            <h1>LUNAR'S CHOICE RESTAURANT</h1>
-            <P>Don't miss out on the latest updates, special offers, and exclusive events at Lunar's Choice!
-                <br> Subscribe to our newsletter to stay in the loop with all the exciting happenings at our new restaurant.</P>
-                <div>
-                    <button type="button">LEARN MORE</button>
-                    <button type="button" >SUBSCRIBE</button>
-                    </div>
-        </div>
-        <footer>
-            <p class="p">Reach out to us on any of our social media platforms</p>
-            <div class="social">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-<a href="#"><i class="fa-brands fa-instagram"></i></a>
-<a href="#"><i class="fa-brands fa-tiktok"></i></a>
-            </div>
-            <p class="end">Copyright @Lunar's Choice Restaurant</p>
-        </footer>
+      </div>
     </div>
-</body>
+    <footer>
+      <p class="p">Reach out to us on any of our social media platforms</p>
+      <div class="social">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+      </div>
+      <p class="end">Copyright @Lunar's Choice Restaurant</p>
+    </footer>
+  </body>
 </html>
