--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Lexend:wght@200&family=Poppins:wght@300&family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
     <!---craeting the landing page-->
@@ -63,5 +64,6 @@
       </div>
       <p class="end">Copyright @Lunar's Choice Restaurant</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
