finishing the about section

--- a/About.html
+++ b/About.html
@@ -2,12 +2,46 @@
 <head><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<div class="about">
 <div class="clearfix">
     <img src="res/pork belly.jpeg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded-end border border-0 border rounded-0 border border-dark row align-items-end" alt="...">
   
-    <p class="fs-5 text-center my-3 lg-3 lh-1 text-warning">Lunar's Choice Restaurant is a one-of-a-kind dining experience that transports you to another world with its celestial-themed decor and out-of-this-world menu. The space is adorned with twinkling fairy lights, shimmering silver accents, and cosmic murals that create a magical ambiance. The menu at Lunar's Choice features innovative fusion dishes that combine flavors and ingredients from around the globe. From moon-inspired cocktails to star-studded entrees, each dish is expertly crafted and beautifully presented. The waitstaff is knowledgeable and attentive, ensuring that every aspect of your dining experience is stellar. Whether you're a foodie looking to explore new culinary horizons or simply seeking a unique and unforgettable meal, Lunar's Choice Restaurant is the perfect destination for an otherworldly dining adventure.</p>
-   <p class="fs-5 lh-1 text-center text-warning">As you enter Lunar's Choice Restaurant, you are greeted with the soothing sounds of ambient music and the intoxicating aroma of exotic spices. The dining room is bathed in a soft, ethereal glow, creating a serene and enchanting atmosphere. The menu at Lunar's Choice is a culinary journey through the cosmos, with dishes inspired by the phases of the moon and the constellations in the night sky. Indulge in dishes such as the Nebula Noodle Bowl, a colorful and flavorful mix of noodles, vegetables, and savory broth, or the Galactic Grilled Sea Bass, a perfectly seared fish served with a celestial sauce. Be sure to save room for dessert, as the Cosmic Cheesecake and Shooting Star Sorbet are sure to delight your taste buds. Whether you're a seasoned foodie or a casual diner looking for a unique and memorable meal, Lunar's Choice Restaurant is a celestial dining experience not to be missed.</p>
+    <p class="fs-5 text-center my-3 lg-3 lh-1 text-warning fw-bold">Lunar's Choice Restaurant is a one-of-a-kind dining experience that transports you to another world with its celestial-themed decor and out-of-this-world menu. The space is adorned with twinkling fairy lights, shimmering silver accents, and cosmic murals that create a magical ambiance. The menu at Lunar's Choice features innovative fusion dishes that combine flavors and ingredients from around the globe. From moon-inspired cocktails to star-studded entrees, each dish is expertly crafted and beautifully presented. The waitstaff is knowledgeable and attentive, ensuring that every aspect of your dining experience is stellar. Whether you're a foodie looking to explore new culinary horizons or simply seeking a unique and unforgettable meal, Lunar's Choice Restaurant is the perfect destination for an otherworldly dining adventure.</p>
+   <p class="fs-5 lh-1 text-center text-warning fw-bold">As you enter Lunar's Choice Restaurant, you are greeted with the soothing sounds of ambient music and the intoxicating aroma of exotic spices. The dining room is bathed in a soft, ethereal glow, creating a serene and enchanting atmosphere. The menu at Lunar's Choice is a culinary journey through the cosmos, with dishes inspired by the phases of the moon and the constellations in the night sky. Indulge in dishes such as the Nebula Noodle Bowl, a colorful and flavorful mix of noodles, vegetables, and savory broth, or the Galactic Grilled Sea Bass, a perfectly seared fish served with a celestial sauce. Be sure to save room for dessert, as the Cosmic Cheesecake and Shooting Star Sorbet are sure to delight your taste buds. Whether you're a seasoned foodie or a casual diner looking for a unique and memorable meal, Lunar's Choice Restaurant is a celestial dining experience not to be missed.
+    As you dine at Lunar's Choice Restaurant, you are taken on a gastronomic journey through the universe, with each dish carefully crafted to evoke a sense of wonder and delight. The menu features a mix of familiar flavors and exotic ingredients, expertly combined to create dishes that are both comforting and exciting. The Lunar's Choice signature cocktail menu offers a selection of inventive and visually stunning drinks, such as the Moonbeam Martini and the Solar Eclipse Sangria. The attentive waitstaff is knowledgeable about the menu and eager to share the stories behind each dish, adding to the overall dining experience. The restaurant also offers a special stargazing terrace where guests can enjoy their meal under the night sky, complete with telescopes for observing the stars and planets above. Whether you're celebrating a special occasion or simply looking for a unique dining experience, Lunar's Choice Restaurant is a celestial destination that will leave you starry-eyed and satisfied.
+   <ul class="fw-bold text-warning fs-5">
+    <li>
+      Here are some additional details about Lunar's Choice Restaurant:
+
+Chef's Specialties: Lunar's Choice Restaurant is known for its Chef's Specialties, which are unique and innovative dishes created by the talented culinary team. These dishes often feature seasonal ingredients and creative flavor combinations that are sure to impress even the most discerning food enthusiasts.
+
+Private Events: Lunar's Choice Restaurant offers the option to host private events and special occasions in their elegant and celestial-themed dining space. Whether you're celebrating a birthday, anniversary, or corporate event, the restaurant can accommodate your needs and provide a memorable experience for you and your guests.
+
+Sustainability Practices: Lunar's Choice Restaurant is committed to sustainability and environmentally friendly practices. They source ingredients locally whenever possible, reduce food waste through composting and recycling initiatives, and strive to minimize their carbon footprint through energy-efficient operations.
+
+Community Engagement: Lunar's Choice Restaurant is actively involved in the local community, supporting charity events, fundraisers, and initiatives that benefit those in need. They also collaborate with local farmers, artisans, and producers to promote and showcase the region's culinary offerings.
+
+Culinary Workshops: In addition to their regular dining services, Lunar's Choice Restaurant offers culinary workshops and cooking classes for guests who are interested in learning more about the art of gastronomy. These workshops provide hands-on experience and insights into the restaurant's creative process.
+
+These are just a few additional details about Lunar's Choice Restaurant that showcase its commitment to excellence, creativity, and community engagement. If you have any specific questions or would like more information about a particular aspect of the restaurant, feel free to ask!
+
+more please
+Certainly! Here are some more details about Lunar's Choice Restaurant:
+
+Wine and Beverage Pairings: Lunar's Choice Restaurant offers an extensive wine list curated to complement the flavors and textures of their dishes. The knowledgeable sommeliers are on hand to provide recommendations and suggest perfect pairings for your meal. Additionally, the restaurant features a selection of artisanal cocktails, craft beers, and non-alcoholic beverages to suit every palate.
+
+Seasonal Menus: Lunar's Choice Restaurant changes its menu seasonally to showcase the freshest and most vibrant ingredients available. Each season brings a new array of dishes that highlight the flavors and colors of that time of year, ensuring a dynamic and ever-evolving dining experience for guests.
+
+Artisanal Desserts: The dessert menu at Lunar's Choice Restaurant is a decadent and indulgent affair, featuring a selection of artisanal sweets and treats that are as visually stunning as they are delicious. From handcrafted chocolates to intricate pastries, each dessert is a work of art that provides a sweet ending to your meal.
+
+Interactive Dining Experiences: In addition to their regular dining services, Lunar's Choice Restaurant offers interactive dining experiences such as chef's table dinners, tasting menus, and culinary demonstrations. These experiences allow guests to engage with the chefs, learn about the preparation of dishes, and gain a deeper appreciation for the art of cooking.
+
+Celestial Events: Throughout the year, Lunar's Choice Restaurant hosts special celestial events such as themed dinners, stargazing nights, and lunar celebrations. These events offer a unique and immersive dining experience that combines food, culture, and astronomy in a magic
+    </li>
+
+  </p>
     
   </div>
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </html>
