menu section fixing

--- a/menu.html
+++ b/menu.html
@@ -1,21 +1,87 @@
 <!DOCTYPE html>
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/menu.css">
 </head>
-<div class="container">
+<div class="work">
+  <div class="title">
+    <!--restaurant menu-->
+<h1>LUNAR'S CHOICE RESTAURANT</h1>
+  </div>
+  <h2 class="text-center">Appetizers</h2>
+  <div class="container-md">
     <div class="row">
       <div class="col">
-        Column
+        <img src="res/Baked Sweet Potato Fries - Cooking Classy.jpeg" class="rounded float-start" alt="..." height="200px">
+        <figcaption class="figure-caption text-warning">$45</figcaption>
+        <p class="text-uppercase">Baked sweet Potato</p>
+        <p class="fs-6 text-break">Baked sweet potatoes are a good source of vitamins, minerals, and fiber, making them a healthy choice.</p>
       </div>
       <div class="col">
-        Column
+        <div class="text-center">
+          <img src="res/Fish Fingers recipe.jpeg" class="rounded" alt=".." height="200px">
+        </div>
+        <figcaption class="figure-caption text-warning">$55</figcaption>
+        <p class="text-uppercase">Fish fingers</p> 
+        <p class="fs-6">Fish fingers are a popular finger food made from breaded and fried fish fillets, often served with tartar sauce or ketchup.</p>
       </div>
       <div class="col">
-        Column
+        <img src="res/panacakes.jpeg" class="rounded float-end" alt="..." height="200px">
+        <figcaption class="figure-caption text-warning">$50</figcaption>
+        <p class="text-uppercase">Pancakes</p>
+        <p class="fs-6 text-break">Pancakes are a breakfast staple made from a batter of flour, eggs, milk, and butter, cooked on a griddle and typically served with syrup or fruit toppings.</p>
       </div>
     </div>
+    <h2 class="text-center">Main Course</h2>
+<div class="container-md">
+  <div class="row">
+    <div class="col">
+      <img src="res/Africa jollof rice.jpeg" class="rounded float-start" alt="..." height="200px" width="190px">
+      <figcaption class="figure-caption text-warning">$50</figcaption>
+      <p class="text-uppercase">Africa jollof rice</p>
+      <p>Jollof rice is a flavorful West African dish made with rice, tomatoes, onions, and a blend of spices, often served with meat or vegetables.</p>
+    </div>
+    <div class="col">
+      <div class="text-center">
+        <img src="res/Tortellini With Roasted Red Pepper Sauce - Dash of Mandi.jpeg" class="rounded" alt="..." height="200px">
+      </div>
+      <figcaption class="figure-caption text-warning">$95</figcaption>
+      <p class="text-uppercase">Tortellini</p>
+      <p>Tortellini are small, stuffed pasta shapes that are typically filled with cheese, meat, or vegetables and served with sauce.</p>
+    </div>
+    <div class="col">
+      <img src="res/Rack of Lamb with Herb Crust.jpeg" class="rounded float-end" alt="..." height="200px">
+      <figcaption class="figure-caption text-warning">$65</figcaption>
+      <p class="text-uppercase">Rack of lamb</p>
+      <p>Rack of lamb is a cut of meat from the rib section of a lamb, usually roasted or grilled and served as a gourmet dish.</p>
+    </div>
   </div>
-  
+  <h2 class="text-center">Desserts</h2>
+<div class="container-md">
+  <div class="row">
+    <div class="col">
+      <img src="res/Designing Desserts with Daniel Fletcher - Great British Chefs.jpeg" class="rounded float-start" alt="..." height="200px" width="190px">
+      <figcaption class="figure-caption text-warning">$70</figcaption>
+      <p class="text-uppercase">Strawberry crush</p>
+      <p>From strawberry shortcakes to strawberry tarts, there are a variety of ways to incorporate this sweet and juicy fruit into desserts</p>
+    </div>
+    <div class="col">
+      <div class="text-center">
+        <img src="res/download (3).jpeg" class="rounded" alt="..." height="200px" width="190px">
+      </div>
+      <figcaption class="figure-caption text-warning">$155</figcaption>
+      <p class="text-uppercase">Ice cream sundae</p>
+      <p>An ice cream sundae is a classic dessert made with scoops of ice cream topped with syrup, whipped cream, nuts, and a cherry.</p>
+    </div>
+    <div class="col">
+      <img src="res/MANGO, COCCO E BERGAMOTTO.jpeg" class="rounded float-end" alt="..." height="200px" >
+      <figcaption class="figure-caption text-warning">$200</figcaption>
+      <p class="text-uppercase">Mango Cocco E</p>
+      <p>Mango coco E is a tropical dessert made with mango, coconut milk, and other ingredients, creating a sweet and refreshing treat.</p>
+    </div>
+  </div>
+  </div>
+</div>
+<!--end of menu section-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
     </html>
