--- a/About.html
+++ b/About.html
@@ -2,7 +2,9 @@
 <head><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!--About the restaurant-->
 <div class="about">
+  <!--creating a responsive image using the layout clumns-->
 <div class="clearfix">
     <img src="res/pork belly.jpeg" class="col-md-6 float-md-end mb-3 ms-md-3 rounded-end border border-0 border rounded-0 border border-dark row align-items-end" alt="...">
   
@@ -36,12 +38,13 @@ Artisanal Desserts: The dessert menu at Lunar's Choice Restaurant is a decadent 
 
 Interactive Dining Experiences: In addition to their regular dining services, Lunar's Choice Restaurant offers interactive dining experiences such as chef's table dinners, tasting menus, and culinary demonstrations. These experiences allow guests to engage with the chefs, learn about the preparation of dishes, and gain a deeper appreciation for the art of cooking.
 
-Celestial Events: Throughout the year, Lunar's Choice Restaurant hosts special celestial events such as themed dinners, stargazing nights, and lunar celebrations. These events offer a unique and immersive dining experience that combines food, culture, and astronomy in a magic
+Celestial Events: Throughout the year, Lunar's Choice Restaurant hosts special celestial events such as themed dinners, stargazing nights, and lunar celebrations. These events offer a unique and immersive dining experience that combines food, culture, and astronomy in a magical form.
     </li>
 
   </p>
     
   </div>
 </div>
+<!--the end-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </html>
