--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,9 @@
 <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/contact.css">
 </head>
+<!--The contact section-->
 <section class="contact">
+    <!--using forms for it-->
     <div class="content">
 <h2>Contact Us</h2>
 <p>We value your feedback and are always looking for ways to improve our restaurant and provide the best experience for our customers. If you have any questions, comments, or concerns, please feel free to contact us:
@@ -54,4 +56,5 @@
         </div>
     </div>
 </section>
+<!--end of the section-->
 </html>
