--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2 class="logo">LUNAR'S <span>CHOICE</span></h2>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="Menu.html">Menu</a></li>
+          <li><a href="menu.html">Menu</a></li>
           <li><a href="About.html">About Us</a></li>
           <li><a href="contact.html">contact Us</a></li>
         </ul>
